--- a/src/FIGAudioServices.Infra/FIGAudioServices.Infra.csproj
+++ b/src/FIGAudioServices.Infra/FIGAudioServices.Infra.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\FIGAudioServices.Entities\FIGAudioServices.Entities.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
