--- a/src/FIGAudioServices.Infra/FIGAudioServices.Infra.csproj
+++ b/src/FIGAudioServices.Infra/FIGAudioServices.Infra.csproj
@@ -9,5 +9,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+  </ItemGroup>
 
 </Project>
