--- a/src/FIGAudioServices.Infra/FIGAudioServices.Infra.csproj
+++ b/src/FIGAudioServices.Infra/FIGAudioServices.Infra.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.7" />
   </ItemGroup>
 
 </Project>
