--- a/src/FIGAudioServices.Application/FIGAudioServices.Application.csproj
+++ b/src/FIGAudioServices.Application/FIGAudioServices.Application.csproj
@@ -6,9 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FIGAudioServices.Entities\FIGAudioServices.Entities.csproj" />
+    <ProjectReference Include="..\FIGAudioServices.Infra\FIGAudioServices.Infra.csproj" />
+    <ProjectReference Include="..\FIGAudioServices.Services\FIGAudioServices.Services.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
