--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (console)",
+            "name": "FIGAudioServices.Application",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
